2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  add Code.codeOrder attribute, keeping track of the order in
	  which codeObjects is added to.
	  add addCodeObject method.
	* pychecker/warn.py:
	  Go through codeObjects in order.
	  Fixing the ordering moves the warning in the previous test from
	  containerFirst to containerSecond, which makes more sense, but
	  still shows suppression bleed.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/test_nestedsuppression.py:
	  Add a test that shows that suppressions in nested code
	  bleed over into their sibling code blocks and parent.
	  Curiously, in my case it warned correctly about containerFirst,
	  but did not warn in containerSecond.
	  Debug log indicates that in containerSecond, the second() function
	  was parsed (and suppression was added) before first().

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Document CodeChecks.Code.codeObjects

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Identify nested code better.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Give us stats on how many warnings were triggered processing
	  each kind of block.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/Config.py:
	  Process command line args before config files.
	  This gives a -d option a change to debug the processing of
	  config files.
	  Add debugging of loaded suppressions.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Debug filtering the warnings with the blacklist.
	* pychecker/pcmodules.py:
	  Document Class.ignoreAttrs.
	* pychecker/checker.py:
	  getWarnings only used by TKInter; so don't untils.debug there
	  too.
	* pychecker/Stack.py:
	  Clean up and document getType a little.  There are unneeded