@@ -1,5 +1,14 @@
 2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/warn.py:
+	  Push config before processing a nested function.
+	  This fixes the new test_nestedsuppression.py
+	* test/expected/test_nestedsuppression__objattrs:
+	* test/test_suppressions.py:
+	  Add the new test to the test suite, with four expected warnings.
+
+2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* pychecker/CodeChecks.py:
 	  add Code.codeOrder attribute, keeping track of the order in
 	  which codeObjects is added to.
